Update RWD for section features

--- a/src/sass/components/_section--features.scss
+++ b/src/sass/components/_section--features.scss
@@ -2,36 +2,43 @@
   padding: 5rem 0;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-device-width: 1000px) {
   .section--features {
     .container {
-      .row {
-        .col {
-          min-width: 100%;
-          margin-bottom: 20px;
+      .col {
+        padding: 0 10px;
+        max-width: 30%;
+        min-width: 20%;
+        font-size: 0.9rem;
+        h5 {
+          font-size: 1.1rem;
         }
       }
     }
   }
 }
 
-@media screen and (min-width: 321px) and (max-device-width: 480px) {
+@media screen and (max-width: 991px) {
   .section--features {
     .container {
-      .row {
-        .col {
-          min-width: 100%;
-          margin-bottom: 20px;
+      .col {
+        padding: 0 10px;
+        max-width: 40%;
+        min-width: 20%;
+        font-size: 0.8rem;
+        .icon {
+          font-size: 1rem;
+        }
+        h5 {
+          font-size: 0.8rem;
         }
       }
     }
   }
 }
-
-@media screen and (min-width: 481px) and (max-device-width: 812px) {
+@media screen and (max-width: 812px) {
   .section--features {
     .container {
-      max-width: 736px;
       .col {
         padding: 0 10px;
         max-width: 50%;
@@ -42,37 +49,13 @@
   }
 }
 
-@media screen and (min-width: 813px) and (max-device-width: 1000px) {
+@media screen and (max-width: 560px) {
   .section--features {
     .container {
-      max-width: 960px;
-    }
-    .col {
-      padding: 0 10px;
-      max-width: 40%;
-      min-width: 20%;
-      font-size: 0.8rem;
-      .icon {
-        font-size: 1rem;
-      }
-      h5 {
-        font-size: 1rem;
-      }
-    }
-  }
-}
-
-@media screen and (min-width: 897px) and (max-device-width: 1000px) {
-  .section--features {
-    .container {
-      max-width: 1000px;
-      .col {
-        padding: 0 10px;
-        max-width: 30%;
-        min-width: 20%;
-        font-size: 0.9rem;
-        h5 {
-          font-size: 1.1rem;
+      .row {
+        .col {
+          min-width: 100%;
+          margin-bottom: 20px;
         }
       }
     }
