Add transition of background-color, color & border-color properties by extending placeholder

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -19,6 +19,7 @@ footer {
             font-size: 14px;
             line-height: 30px;
             color: rgb(169, 169, 169);
+            @extend .transition;
 
             &:hover {
               color: #ffffff;
@@ -68,6 +69,7 @@ footer {
           a {
             color: rgb(169, 169, 169);
             text-decoration: none;
+            @extend .transition;
 
             &:hover {
               color: $primary;
