--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -14,6 +14,7 @@ header {
         a {
           color: #ffffff;
           font-size: 13px;
+          @extend .transition;
 
           &:hover {
             color: $primary;
@@ -70,6 +71,7 @@ header {
         display: inline-block;
         position: relative;
         color: #ffffff;
+        @extend .transition;
 
         .cart-icon {
           background-color: $primary;
@@ -80,6 +82,7 @@ header {
           align-items: center;
           justify-content: center;
           font-size: 20px;
+          @extend .transition;
 
           i {
             margin-right: 5px;
@@ -144,6 +147,7 @@ header {
             border-top: 4px solid #ffffff;
             font-weight: 500;
             letter-spacing: 1px;
+            @extend .transition;
 
             &:hover,
             &.active {
