Remove untracked tag div

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -49,7 +49,10 @@
     }
   }
 
-  &.active {
+  &.active,
+  &:hover {
+    text-decoration: none;
+    cursor: pointer;
     i {
       background-color: $primary;
       color: #ffffff;
