--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -25,6 +25,7 @@
       <div class="col-3">
         <div class="product-box">
           <div class="photo">
+            <img src="../src/images//furniture1.jpeg" alt="furniture1" />
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -53,6 +54,7 @@
       <div class="col-3">
         <div class="product-box">
           <div class="photo">
+            <img src="../src/images/furniture2.jpeg" alt="furniture2" />
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -81,6 +83,7 @@
       <div class="col-3">
         <div class="product-box">
           <div class="photo">
+            <img src="../src/images/furniture3.jpeg" alt="furniture3" />
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -109,6 +112,7 @@
       <div class="col-3">
         <div class="product-box">
           <div class="photo">
+            <img src="../src/images/furniture4.jpeg" alt="furniture4" />
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -137,6 +141,7 @@
       <div class="col-3">
         <div class="product-box">
           <div class="photo">
+            <img src="../src/images/furniture5.jpeg" alt="furniture5" />
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -165,6 +170,7 @@
       <div class="col-3">
         <div class="product-box">
           <div class="photo">
+            <img src="../src/images/furniture6.jpeg" alt="furniture6" />
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -193,6 +199,7 @@
       <div class="col-3">
         <div class="product-box">
           <div class="photo">
+            <img src="../src/images/furniture7.jpeg" alt="furniture7" />
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -221,6 +228,7 @@
       <div class="col-3">
         <div class="product-box">
           <div class="photo">
+            <img src="../src/images/furniture8.jpeg" alt="furniture8" />
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
