--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -5,7 +5,7 @@
 
   .photo {
     position: relative;
-    padding: 80% 10px 0 10px;
+    padding: 10px 10px 0 10px;
     background: {
       color: #f4f5f7;
       size: contain;
@@ -29,6 +29,12 @@
     .buttons {
       display: flex;
       justify-content: space-between;
+    }
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
     }
   }
 
