--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -2,7 +2,7 @@
   margin-bottom: 2rem;
 
   .cover {
-    padding: 70% 25px 0 25px;
+    padding: 25px 25px 0 25px;
     background: {
       color: #f4f5f7;
       size: cover;
@@ -26,6 +26,11 @@
       .comments {
         text-align: right;
       }
+    }
+
+    img {
+      max-height: 100%;
+      max-width: 100%;
     }
   }
 
