--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -85,9 +85,9 @@ header {
             margin-right: 5px;
           }
         }
-
         .cart-counter {
-          width: 28px;
+          min-width: 28px;
+          padding: 0 4px;
           height: 27px;
           border-radius: 14px;
           background-color: $header-bg;
