--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -78,5 +78,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    .old-price {
+      display: none;
+      justify-content: center;
+      text-align: center;
+      text-decoration: line-through;
+      font-size: 14px;
+      color: $old-price-color;
+      margin-left: 30px;
+      font-family: "Poppins", sans-serif;
+      font-weight: 300;
+      &.show-price {
+        display: flex;
+      }
+    }
   }
 }
