--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,3 +9,7 @@ $primary: #d58e32;
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+
+$universal-transition-timing: 250ms;
+$bg-transition-timing: 250ms;
+$text-transition-timing: 250ms;
