--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -29,7 +29,8 @@
   font-size: 13px;
   line-height: 22px;
 
-  &:hover {
+  &:hover,
+  &--active {
     background-color: #2a2a2a;
     color: #ffffff;
   }
