--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -80,7 +80,7 @@ header {
           align-items: center;
           justify-content: center;
           font-size: 20px;
-
+          position: relative;
           i {
             margin-right: 5px;
           }
@@ -98,8 +98,9 @@ header {
           color: rgb(224, 227, 237);
           position: absolute;
           top: 50%;
-          right: 0;
-          transform: translate(50%, -50%);
+          left: 70%;
+          transform: translate(0%, -50%);
+          font-size: 14px;
         }
 
         &:hover {
