--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -24,7 +24,7 @@
     <div class="row">
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo first-bed">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
