--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -6,12 +6,18 @@
   .photo {
     position: relative;
     padding: 80% 10px 0 10px;
+
     background: {
       color: #f4f5f7;
       size: contain;
       position: center;
       repeat: no-repeat;
     }
+
+    .first-bed {
+      background-image: url("../../images/beds/bed-1358198_640-min.png");
+    }
+
     overflow: hidden;
     align-items: flex-end;
 
