Change class names and set two new variables - -color and -color

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,11 +1,11 @@
 $header-topbar-bg: #864343;
 $header-bg: #723636;
 
-$footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
 
 $primary: #d58e32;
 
-$text-color: #2a2a2a;
+$darkgrey-color: #2a2a2a;
+$white-color: #ffffff;
 
 $form-border-color: #292929;
