--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -71,9 +71,7 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline btn-outline--active"
-                ><i class="far fa-heart"></i
-              ></a>
+              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
               <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
             </div>
             <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
@@ -102,7 +100,7 @@
           <div class="actions">
             <div class="outlines">
               <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline btn-outline--active"
+              <a href="#" class="btn-outline active"
                 ><i class="fas fa-exchange-alt"></i
               ></a>
             </div>
@@ -131,10 +129,8 @@
           <div class="line"></div>
           <div class="actions">
             <div class="outlines">
-              <a href="#" class="btn-outline btn-outline--active"
-                ><i class="far fa-heart"></i
-              ></a>
-              <a href="#" class="btn-outline btn-outline--active"
+              <a href="#" class="btn-outline active"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline active"
                 ><i class="fas fa-exchange-alt"></i
               ></a>
             </div>
