--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -11,7 +11,7 @@
       height: 60px;
       border-radius: 100%;
       position: relative;
-      color: $darkgrey-color;
+      color: $base-color;
       display: inline-flex;
       justify-content: center;
       align-items: center;
