--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -40,7 +40,7 @@ footer {
   }
 
   .bottom-bar {
-    background-color: $darkgrey-color;
+    background-color: $base-color;
 
     .container > .row {
       height: 95px;
