--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,8 +4,7 @@ $header-bg: #723636;
 $footer-bg: #363636;
 
 $primary: #d58e32;
-
-$darkgrey-color: #2a2a2a;
-$white-color: #ffffff;
+$base-color: #2a2a2a;
+$font-color: #ffffff;
 
 $form-border-color: #292929;
