--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -134,7 +134,7 @@ header {
           align-items: stretch;
 
           a {
-            color: $darkgrey-color;
+            color: $base-color;
             text-transform: uppercase;
             font-size: 12px;
             padding: 1rem;
@@ -153,7 +153,7 @@ header {
             }
 
             &.active {
-              border-color: $darkgrey-color;
+              border-color: $base-color;
             }
           }
         }
@@ -164,7 +164,7 @@ header {
       border: 1px solid $form-border-color;
       display: inline-flex;
       height: 45px;
-      color: $darkgrey-color;
+      color: $base-color;
 
       .category {
         border-right: 1px solid $form-border-color;
@@ -209,7 +209,7 @@ header {
           outline: none;
 
           &::placeholder {
-            color: $darkgrey-color;
+            color: $base-color;
           }
         }
 
