--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -78,5 +78,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    .old-price {
+      text-decoration: line-through;
+      font-size: 12px;
+      color: #c2c2a3;
+    }
   }
 }
