--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -18,10 +18,16 @@
         <div class="col text-right">
           <ul>
             <li>
-              <a href="#"><i class="fas fa-user"></i> Login</a>
+              <a href="#"
+                ><i class="fas fa-user"></i>
+                <span class="top-bar-menu-el">Login</span></a
+              >
             </li>
             <li>
-              <a href="#"><i class="fas fa-lock"></i> Register</a>
+              <a href="#"
+                ><i class="fas fa-lock"></i>
+                <span class="top-bar-menu-el">Register</span></a
+              >
             </li>
             <li>
               <a href="#"><i class="fas fa-bars"></i></a>
@@ -33,17 +39,20 @@
   </div>
   <div class="company-claim">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row align-items-center banner-elements-container">
         <div class="col text-left phone-number">
-          <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
+          <p>
+            <i class="fas fa-mobile-alt"></i
+            ><span class="phone-number-number">2345 - 3560 - 222</span>
+          </p>
         </div>
-        <div class="col text-center">
+        <div class="col text-center banner-logo-container">
           <a href="#"><img src="./images/logo.png"/></a>
         </div>
         <div class="col text-right cart">
           <a href="#" class="cart-box">
             <div class="cart-icon"><i class="fas fa-shopping-basket"></i></div>
-            <div class="cart-counter">0</div>
+            <div class="cart-counter">123</div>
           </a>
         </div>
       </div>
