--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -195,6 +195,12 @@ header {
           font-size: 14px;
           position: relative;
           z-index: 1;
+
+          &:focus,
+          &:-moz-focusring {
+            color: transparent;
+            text-shadow: 0 0 0 #000;
+          }
         }
       }
 
