--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,11 +1,15 @@
 $header-topbar-bg: #864343;
 $header-bg: #723636;
 
+$post-box-bg: #fff;
+$post-box-cover-bg: #f4f5f7;
+
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
 
 $primary: #d58e32;
 
 $text-color: #2a2a2a;
+$post-info-text-color: #676767;
 
 $form-border-color: #292929;
