--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -30,7 +30,12 @@
   line-height: 22px;
 
   &:hover {
-    background-color: #2a2a2a;
+    background-color: $primary;
     color: #ffffff;
   }
+}
+.btn-outline-active {
+  transition: all 1s ease;
+  color: #ffffff;
+  background-color: $primary;
 }
