--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -56,9 +56,21 @@
           <form action="" class="search-form">
             <div class="category">
               <i class="fas fa-list-ul"></i>
-              <select name="" id="">
+              <ul class="Menu_Poziome">
+                <li>
+                  <a href="#">Select a category</a>
+                  <ul class="Menu_Pionowe">
+                    <li><a href="#">Furniture 1</a></li>
+                    <li><a href="#">Furniture 2</a></li>
+                    <li><a href="#">Furniture 3</a></li>
+                  </ul>
+                </li>
+              </ul>
+
+              <!-- <select name="" id="">
                 <option value="">Select a category</option>
-              </select>
+              </select>-->
+
               <i class="fas fa-caret-down"></i>
             </div>
             <div class="search-field">
