--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,9 +7,10 @@ $footer-bg: #363636;
 $primary: #d58e32;
 
 $text-color: #2a2a2a;
+$button-hover-color: #fff;
 
 $form-border-color: #292929;
 
-$universal-transition-timing: 250ms;
+$hover-transition-timing: 250ms;
 $bg-transition-timing: 250ms;
 $text-transition-timing: 250ms;
