--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -7,9 +7,7 @@
   padding: 10px 30px;
 
   &:not(.no-hover):hover {
-    @extend %time-hover-animation;
-    @extend %color-wh-hover-animation;
-    @extend %bg-primary-hover-animation;
+    @extend %buttons-hover-animation;
     text-decoration: none;
   }
 }
@@ -31,8 +29,7 @@
   line-height: 22px;
 
   &:hover {
-    @extend %time-hover-animation;
-    @extend %color-wh-hover-animation;
+    @extend %buttons-hover-animation;
     background-color: #2a2a2a;
   }
 }
