--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -14,6 +14,7 @@ footer {
         margin: 0 0 1.5rem 0;
         padding: 0;
         list-style: none;
+
         li {
           a {
             font-size: 14px;
@@ -21,8 +22,7 @@ footer {
             color: rgb(169, 169, 169);
 
             &:hover {
-              @extend %time-hover-animation;
-              @extend %color-wh-hover-animation;
+              @extend %buttons-hover-animation;
               background-color: transparent;
               text-decoration: none;
             }
@@ -73,8 +73,8 @@ footer {
             text-decoration: none;
 
             &:hover {
-              @extend %time-hover-animation;
-              @extend %color-primary-hover-animation;
+              transition: $hover-transition-timing;
+              color: $primary;
             }
           }
         }
