--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -2,6 +2,7 @@
   border: 1px solid #b6b6b6;
   text-align: center;
   margin-top: 40px;
+  height: calc(100% - 40px);
 
   .icon {
     transform: translateY(-50%);
@@ -34,6 +35,7 @@
   }
 
   .content {
+    padding: 0 5px;
     text-transform: uppercase;
     color: rgb(42, 42, 42);
     margin-top: -0.5rem;
@@ -58,5 +60,17 @@
     .content {
       color: $primary;
     }
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 766px) {
+  .col-feature {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .col-feature {
+    margin-bottom: 10px;
   }
 }
