Hide login and register text on mobile and display only icons

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -37,6 +37,16 @@ header {
       i {
         margin-right: 5px;
       }
+
+      a span {
+        display: none;
+      }
+    }
+
+    @include media-breakpoint-up(sm) {
+      .text-right ul li a span {
+        display: inline;
+      }
     }
   }
 
