--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -52,3 +52,29 @@
     }
   }
 }
+
+@media (min-width: 320px) and (max-width: 767px) and (orientation: portrait) {
+  .section--blog-posts {
+    .container {
+      .row {
+        justify-content: center;
+        .col-sm-12 {
+          margin: 0 10px;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 995px) and (orientation: portrait) {
+  .section--blog-posts {
+    .container {
+      .row {
+        justify-content: center;
+        .col-md-6 {
+          max-width: 50%;
+        }
+      }
+    }
+  }
+}
