--- a/src/partials/30_section-features.html
+++ b/src/partials/30_section-features.html
@@ -1,8 +1,8 @@
 <div class="section--features">
   <div class="container">
-    <div class="row">
-      <div class="col">
-        <a href="#" class="feature-box active">
+    <div class="row features-row">
+      <div class="col-lg-3 col-sm-6 col-md-6 col-6 feature-box">
+        <a href="#">
           <div class="icon"><i class="fas fa-truck"></i></div>
           <div class="content">
             <h5>Free shipping</h5>
@@ -10,17 +10,17 @@
           </div>
         </a>
       </div>
-      <div class="col">
-        <a href="#" class="feature-box">
+      <div class="col-lg-3 col-sm-6 col-md-6 col-6 feature-box">
+        <a href="#">
           <div class="icon"><i class="fas fa-headphones"></i></div>
           <div class="content">
-            <a href="#"><h5>24/7 customer</h5></a>
+            <h5>24/7 customer</h5>
             <p>support</p>
           </div>
         </a>
       </div>
-      <div class="col">
-        <a href="#" class="feature-box">
+      <div class="col-lg-3 col-sm-6 col-md-6 col-6 feature-box">
+        <a href="#">
           <div class="icon"><i class="fas fa-reply-all"></i></div>
           <div class="content">
             <h5>Money back</h5>
@@ -28,8 +28,8 @@
           </div>
         </a>
       </div>
-      <div class="col">
-        <a href="#" class="feature-box">
+      <div class="col-lg-3 col-sm-6 col-md-6 col-6 feature-box">
+        <a href="#">
           <div class="icon"><i class="fas fa-bullhorn"></i></div>
           <div class="content">
             <h5>Member discount</h5>
