--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -2,6 +2,12 @@
   border: 1px solid #b6b6b6;
   text-align: center;
   margin-top: 40px;
+  float: left;
+  max-width: 245px;
+
+  a {
+    text-decoration: none;
+  }
 
   .icon {
     transform: translateY(-50%);
