--- a/src/partials/70_section-blog-posts.html
+++ b/src/partials/70_section-blog-posts.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-4">
+      <div class="column">
         <div class="post-box">
           <div class="cover">
             <img src="../src/images/blog1.jpeg" alt="blog1" />
@@ -34,7 +34,8 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+
+      <div class="column">
         <div class="post-box">
           <div class="cover">
             <img src="../src/images/blog2.jpeg" alt="blog2" />
@@ -54,7 +55,8 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+
+      <div class="column">
         <div class="post-box">
           <div class="cover">
             <img src="../src/images/blog3.jpeg" alt="blog3" />
