--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -57,3 +57,31 @@
     }
   }
 }
+
+@media (min-width: 576px) {
+  .column {
+    width: 100%;
+  }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .column {
+    width: 50%;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+  .column {
+    width: 33%;
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+//@media (min-width: 1200px) { ... }
+@media (min-width: 1200px) {
+  .column {
+    width: 33%;
+  }
+}
