WDP190201-10 Corrected the code in 10_header.html and _header.scss

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -56,20 +56,16 @@
           <form action="" class="search-form">
             <div class="category">
               <i class="fas fa-list-ul"></i>
-              <ul class="Menu_Poziome">
+              <ul class="horizontal-menu">
                 <li>
                   <a href="#">Select a category</a>
-                  <ul class="Menu_Pionowe">
-                    <li><a href="#">Furniture 1</a></li>
-                    <li><a href="#">Furniture 2</a></li>
-                    <li><a href="#">Furniture 3</a></li>
+                  <ul class="vertical-menu">
+                    <li><a class="furniture-item" href="#">Furniture 1</a></li>
+                    <li><a class="furniture-item" href="#">Furniture 2</a></li>
+                    <li><a class="furniture-item" href="#">Furniture 3</a></li>
                   </ul>
                 </li>
               </ul>
-
-              <!-- <select name="" id="">
-                <option value="">Select a category</option>
-              </select>-->
 
               <i class="fas fa-caret-down"></i>
             </div>
