--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,6 @@
 $header-topbar-bg: #864343;
 $header-bg: #723636;
+$header-search-form: #ffffff;
 
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
