--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,6 +2,8 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
+        <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
+
         <div class="col-auto heading"><h3>New furniture</h3></div>
         <div class="col menu">
           <ul>
@@ -12,6 +14,7 @@
             <li><a href="#">Dining</a></li>
           </ul>
         </div>
+
         <div class="col-auto dots">
           <ul>
             <li><a href="#" class="active"></a></li>
