--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -81,7 +81,7 @@
     .old-price {
       text-decoration: line-through;
       font-size: 12px;
-      color: #c2c2a3;
+      color: $furniture-old-price;
     }
   }
 }
