Fix HTML formatting & Add help-classes

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -3,34 +3,34 @@
     <div class="container">
       <div class="row">
         <div class="col text-left">
-          <ul>
-            <li>
-              <a href="#">USD <i class="fas fa-caret-down"></i></a>
+          <ul class="top-bar-left-menu">
+            <li class="top-bar-left-menu-el">
+              <a href="#"> USD <i class="fas fa-caret-down"></i> </a>
             </li>
-            <li>
-              <a href="#">English <i class="fas fa-caret-down"></i></a>
+            <li class="top-bar-left-menu-el">
+              <a href="#"> English <i class="fas fa-caret-down"></i> </a>
             </li>
-            <li>
-              <a href="#">Help <i class="fas fa-caret-down"></i></a>
+            <li class="top-bar-left-menu-el">
+              <a href="#"> Help <i class="fas fa-caret-down"></i> </a>
             </li>
           </ul>
         </div>
         <div class="col text-right">
-          <ul>
-            <li>
-              <a href="#"
-                ><i class="fas fa-user"></i>
-                <span class="top-bar-menu-el">Login</span></a
-              >
+          <ul class="top-bar-right-menu">
+            <li class="top-bar-right-menu-el">
+              <a href="#">
+                <i class="fas fa-user"></i>
+                <span class="top-bar-menu-el-text">Login</span>
+              </a>
             </li>
-            <li>
-              <a href="#"
-                ><i class="fas fa-lock"></i>
-                <span class="top-bar-menu-el">Register</span></a
-              >
+            <li class="top-bar-right-menu-el">
+              <a href="#">
+                <i class="fas fa-lock"></i>
+                <span class="top-bar-menu-el-text">Register</span>
+              </a>
             </li>
-            <li>
-              <a href="#"><i class="fas fa-bars"></i></a>
+            <li class="top-bar-right-menu-el">
+              <a href="#"> <i class="fas fa-bars"></i> </a>
             </li>
           </ul>
         </div>
@@ -42,12 +42,12 @@
       <div class="row align-items-center banner-elements-container">
         <div class="col text-left phone-number">
           <p>
-            <i class="fas fa-mobile-alt"></i
-            ><span class="phone-number-number">2345 - 3560 - 222</span>
+            <i class="fas fa-mobile-alt"></i>
+            <span class="phone-number-number">2345 - 3560 - 222</span>
           </p>
         </div>
         <div class="col text-center banner-logo-container">
-          <a href="#"><img src="./images/logo.png"/></a>
+          <a href="#"> <img src="./images/logo.png" /> </a>
         </div>
         <div class="col text-right cart">
           <a href="#" class="cart-box">
