--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -223,7 +223,6 @@ header {
   }
 }
 
-// media queries for mobile
 @media screen and (min-width: 320px) and (max-width: 480px) {
   header {
     .top-bar {
@@ -252,15 +251,19 @@ header {
       .text-left {
         padding-left: 5px;
         padding-right: 0;
-        ul {
+
+        .top-bar-left-menu {
           display: flex;
           justify-content: space-around;
-          li {
+
+          .top-bar-left-menu-el {
             margin-right: 0;
+
             i {
               margin-left: 2px;
             }
-            .top-bar-menu-el {
+
+            .top-bar-menu-el-text {
               display: none;
             }
           }
@@ -271,13 +274,15 @@ header {
         max-width: 120px;
         padding-right: 5px;
         padding-left: 0;
-        ul li {
+
+        .top-bar-right-menu-el {
           margin-left: 0;
 
           i {
             margin-right: 15px;
           }
-          .top-bar-menu-el {
+
+          .top-bar-menu-el-text {
             display: none;
           }
         }
@@ -306,6 +311,7 @@ header {
         padding-right: 0;
         display: flex;
         justify-content: center;
+
         p {
           font-size: 14px;
 
