--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -223,7 +223,7 @@ header {
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   header {
     .top-bar {
       ul {
@@ -262,10 +262,6 @@ header {
             i {
               margin-left: 2px;
             }
-
-            .top-bar-menu-el-text {
-              display: none;
-            }
           }
         }
       }
@@ -274,16 +270,17 @@ header {
         max-width: 120px;
         padding-right: 5px;
         padding-left: 0;
+        .top-bar-right-menu {
+          .top-bar-right-menu-el {
+            margin-left: 0;
 
-        .top-bar-right-menu-el {
-          margin-left: 0;
+            i {
+              margin-right: 15px;
+            }
 
-          i {
-            margin-right: 15px;
-          }
-
-          .top-bar-menu-el-text {
-            display: none;
+            .top-bar-menu-el-text {
+              display: none;
+            }
           }
         }
       }
