--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -52,7 +52,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo second-bed">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -80,7 +80,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo third-bed">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -108,7 +108,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo fourth-bed">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -136,7 +136,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo bedroom">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -164,7 +164,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo second-bedroom">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -192,7 +192,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo third-bedroom">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -220,7 +220,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo fourth-bedroom">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
