Add responsive - main menu

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -66,6 +66,20 @@
               <button><i class="fa fa-search"></i></button>
             </div>
           </form>
+          <div class="menu-button">
+            <a href="#"><i class="fas fa-bars menu-button-dropdown"></i></a>
+          </div>
+        </div>
+        <div class="dropdown-menu">
+          <ul>
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">Furniture</a></li>
+            <li><a href="#">Chair</a></li>
+            <li><a href="#">Table</a></li>
+            <li><a href="#">Sofa</a></li>
+            <li><a href="#">Bedroom</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
         </div>
         <div class="col-auto menu">
           <ul>
