--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,13 +1,13 @@
 .btn-main {
   background-color: #2a2a2a;
-  color: #ffffff;
+  color: $bright-font;
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
   padding: 10px 30px;
 
   &:not(.no-hover):hover {
-    color: #ffffff !important;
+    color: $bright-font !important;
     background-color: $primary;
     text-decoration: none;
   }
@@ -31,11 +31,12 @@
 
   &:hover {
     background-color: $primary;
-    color: #ffffff;
+    color: $bright-font;
   }
 }
+
 .btn-outline-active {
   transition: all 1s ease;
-  color: #ffffff;
+  color: $bright-font;
   background-color: $primary;
 }
