Add RWD to the main menu

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -52,7 +52,7 @@
   <div class="menu-bar">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-12 col-sm-12 col-md-12 col-xl-6">
+        <div class="col">
           <form action="" class="search-form">
             <div class="category">
               <i class="fas fa-list-ul"></i>
@@ -67,8 +67,8 @@
             </div>
           </form>
         </div>
-
-        <div class="col-12 col-sm-12 col-md-12 col-xl-6 col-auto menu">
+        <a href="#" class="toogler"><i class="fas fa-bars"></i></a>
+        <div class="col-auto menu">
           <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Furniture</a></li>
