Add mobile icon

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -67,9 +67,9 @@
             </div>
           </form>
         </div>
-        <a href="#" class="toogler"><i class="fas fa-bars"></i></a>
+        <span class="toogler"><i class="fas fa-bars"></i></span>
         <div class="col-auto menu">
-          <ul>
+          <ul class="menu-list">
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Furniture</a></li>
             <li><a href="#">Chair</a></li>
